--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -35,7 +35,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
